--- a/dashboard/public/logs-viewer.html
+++ b/dashboard/public/logs-viewer.html
@@ -397,13 +397,27 @@
             }
 
             // Reverse logs so latest appears at top
-            tbody.innerHTML = logs.reverse().map(log => `
-                <tr>
-                    <td class="log-timestamp">${log.timestamp}</td>
-                    <td><span class="log-level-${log.level}">${log.level}</span></td>
-                    <td class="log-message">${log.message}</td>
-                </tr>
-            `).join('');
+            tbody.innerHTML = logs.reverse().map(log => {
+                // Format timestamp to human-readable format
+                const timestamp = new Date(log.timestamp);
+                const formattedTime = timestamp.toLocaleString('en-GB', {
+                    year: 'numeric',
+                    month: '2-digit',
+                    day: '2-digit',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    second: '2-digit',
+                    hour12: false
+                });
+                
+                return `
+                    <tr>
+                        <td class="log-timestamp">${formattedTime}</td>
+                        <td><span class="log-level-${log.level}">${log.level}</span></td>
+                        <td class="log-message">${log.message}</td>
+                    </tr>
+                `;
+            }).join('');
 
             // Update counters
             const errorCount = logs.filter(l => l.level === 'ERROR').length;
