Fix Bot Activity dashboard: replace confusing metrics with Discord status, improve Best Friends display

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -300,20 +300,16 @@
                 <h3>Bot Activity</h3>
                 <div class="metric-content">
                     <div class="metric-item">
-                        <span class="label">Bot Uptime:</span>
+                        <span class="label">Process Uptime:</span>
                         <span class="value" id="bot-uptime">-</span>
                     </div>
                     <div class="metric-item">
-                        <span class="label">Last Update:</span>
-                        <span class="value" id="last-update">-</span>
+                        <span class="label">Discord Status:</span>
+                        <span class="value" id="discord-connection-status">Checking...</span>
                     </div>
                     <div class="metric-item">
-                        <span class="label">Node Version:</span>
-                        <span class="value" id="node-version">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Status:</span>
-                        <span class="value" id="bot-status">Running</span>
+                        <span class="label">Discord Uptime:</span>
+                        <span class="value" id="discord-uptime">-</span>
                     </div>
                 </div>
             </div>
