docs: move test refactor note and browser lint hint

--- a/dashboard/public/reminder-management.html
+++ b/dashboard/public/reminder-management.html
@@ -600,6 +600,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="dashboard.js"></script>
     <script>
+        /* eslint-env browser */
         function toggleCreateForm() {
             const form = document.getElementById('create-form');
             form.style.display = form.style.display === 'none' ? 'block' : 'none';
